@@ -105,6 +105,8 @@ Core and builtins
 Extension Modules
 -----------------
 
+- Bug #1653736: Complain about keyword arguments to time.isoformat.
+
 - operator.count() now raises an OverflowError when the count reaches sys.maxint.
 
 - Bug #1575169: operator.isSequenceType() now returns False for subclasses of dict.
